{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1442,
  "lineage": "03a8fe0a-f39a-75e1-5be4-b58860c4c519",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:listener/app/alb1/051331d3f9a69df5/a6d958ed2bb3b729",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:targetgroup/tf-20241203201320965600000009/98f1356e889a5741",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:674541888232:listener/app/alb1/051331d3f9a69df5/a6d958ed2bb3b729",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:loadbalancer/app/alb1/051331d3f9a69df5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_alb_target_group.webserver",
            "module.ec2.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ec2_instance_sg",
            "module.security.aws_security_group_rule.alb_to_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "frontend_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:targetgroup/tf-20241203201320965600000009/98f1356e889a5741",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:listener-rule/app/alb1/051331d3f9a69df5/a6d958ed2bb3b729/635384b6052d59bc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:674541888232:listener-rule/app/alb1/051331d3f9a69df5/a6d958ed2bb3b729/635384b6052d59bc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:listener/app/alb1/051331d3f9a69df5/a6d958ed2bb3b729",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_alb_listener.front_end",
            "module.ec2.aws_alb_target_group.webserver",
            "module.ec2.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ec2_instance_sg",
            "module.security.aws_security_group_rule.alb_to_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:targetgroup/tf-20241203201320965600000009/98f1356e889a5741",
            "arn_suffix": "targetgroup/tf-20241203201320965600000009/98f1356e889a5741",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:674541888232:targetgroup/tf-20241203201320965600000009/98f1356e889a5741",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20241203201320965600000009",
            "name_prefix": "tf-",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ec2_instance_sg",
            "module.security.aws_security_group_rule.alb_to_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:674541888232:loadbalancer/app/alb1/051331d3f9a69df5",
            "arn_suffix": "app/alb1/051331d3f9a69df5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb1-618909001.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:674541888232:loadbalancer/app/alb1/051331d3f9a69df5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01c56c938905ed720"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009e3ccf66a45624e"
              },
              {
                "subnet_id": "subnet-0cc21a46545afae62"
              }
            ],
            "subnets": [
              "subnet-009e3ccf66a45624e",
              "subnet-0cc21a46545afae62"
            ],
            "tags": {
              "Environment": "Prod"
            },
            "tags_all": {
              "Environment": "Prod"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ec2_instance_sg",
            "module.security.aws_security_group_rule.alb_to_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:network-acl/acl-065d3a873e2918829",
            "default_network_acl_id": "acl-065d3a873e2918829",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-065d3a873e2918829",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "674541888232",
            "subnet_ids": [
              "subnet-009e3ccf66a45624e",
              "subnet-05944116c32a86308",
              "subnet-07b6dc7c244f2837a",
              "subnet-0cc21a46545afae62"
            ],
            "tags": {
              "Demo": "Terraform",
              "Name": "-default"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-default"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:route-table/rtb-00fadc59b003651d3",
            "default_route_table_id": "rtb-00fadc59b003651d3",
            "id": "rtb-00fadc59b003651d3",
            "owner_id": "674541888232",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "-default"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:security-group/sg-0a90da94087df57fc",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a90da94087df57fc",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "674541888232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Demo": "Terraform",
              "Name": "-default"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-default"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6fea004ddae4141",
            "arn": "arn:aws:ec2:us-west-2:674541888232:elastic-ip/eipalloc-0b6fea004ddae4141",
            "domain": "vpc",
            "id": "eipalloc-0b6fea004ddae4141",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-42-44-106.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.44.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Demo": "Terraform",
              "Name": "-us-west-2a"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0693fe7d182cf1ae1",
            "arn": "arn:aws:ec2:us-west-2:674541888232:elastic-ip/eipalloc-0693fe7d182cf1ae1",
            "domain": "vpc",
            "id": "eipalloc-0693fe7d182cf1ae1",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-231-25-67.us-west-2.compute.amazonaws.com",
            "public_ip": "44.231.25.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Demo": "Terraform",
              "Name": "-us-west-2b"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-us-west-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:internet-gateway/igw-086b5d7370f8ec18d",
            "id": "igw-086b5d7370f8ec18d",
            "owner_id": "674541888232",
            "tags": {
              "Demo": "Terraform"
            },
            "tags_all": {
              "Demo": "Terraform"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6fea004ddae4141",
            "association_id": "eipassoc-0eb70ce3e5125f6df",
            "connectivity_type": "public",
            "id": "nat-06f795a8da60002fe",
            "network_interface_id": "eni-071dcbee64cc71d70",
            "private_ip": "10.0.1.62",
            "public_ip": "52.42.44.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-009e3ccf66a45624e",
            "tags": {
              "Demo": "Terraform",
              "Name": "-us-west-2a"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-us-west-2a"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0693fe7d182cf1ae1",
            "association_id": "eipassoc-0f1c72d997ff4a8af",
            "connectivity_type": "public",
            "id": "nat-094344e0a21bbe2bf",
            "network_interface_id": "eni-074e2413d4c25034f",
            "private_ip": "10.0.2.47",
            "public_ip": "44.231.25.67",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc21a46545afae62",
            "tags": {
              "Demo": "Terraform",
              "Name": "-us-west-2b"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-us-west-2b"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0343a4735394f8f921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06f795a8da60002fe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0343a4735394f8f92",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09da855191bd3f84c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-094344e0a21bbe2bf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09da855191bd3f84c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-086b5d7370f8ec18d",
            "id": "r-rtb-00357408298e55f6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00357408298e55f6a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:route-table/rtb-0343a4735394f8f92",
            "id": "rtb-0343a4735394f8f92",
            "owner_id": "674541888232",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2a"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:route-table/rtb-09da855191bd3f84c",
            "id": "rtb-09da855191bd3f84c",
            "owner_id": "674541888232",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2b"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:route-table/rtb-00357408298e55f6a",
            "id": "rtb-00357408298e55f6a",
            "owner_id": "674541888232",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "-public"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dbecca0b5414aca",
            "route_table_id": "rtb-0343a4735394f8f92",
            "subnet_id": "subnet-07b6dc7c244f2837a"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b438712e3e881440",
            "route_table_id": "rtb-09da855191bd3f84c",
            "subnet_id": "subnet-05944116c32a86308"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0427f8fe9af11c2b1",
            "route_table_id": "rtb-00357408298e55f6a",
            "subnet_id": "subnet-009e3ccf66a45624e"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08facd360f7b34007",
            "route_table_id": "rtb-00357408298e55f6a",
            "subnet_id": "subnet-0cc21a46545afae62"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:subnet/subnet-07b6dc7c244f2837a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b6dc7c244f2837a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674541888232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2a"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2a"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:subnet/subnet-05944116c32a86308",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05944116c32a86308",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674541888232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2b"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-private-us-west-2b"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:subnet/subnet-009e3ccf66a45624e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009e3ccf66a45624e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674541888232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "-public-us-west-2a"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-public-us-west-2a"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:subnet/subnet-0cc21a46545afae62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc21a46545afae62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674541888232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "-public-us-west-2b"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "-public-us-west-2b"
            },
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:vpc/vpc-0b785d2ad4c9cfaac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065d3a873e2918829",
            "default_route_table_id": "rtb-00fadc59b003651d3",
            "default_security_group_id": "sg-0a90da94087df57fc",
            "dhcp_options_id": "dopt-06e5265d6328d4581",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b785d2ad4c9cfaac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fadc59b003651d3",
            "owner_id": "674541888232",
            "tags": {
              "Demo": "Terraform"
            },
            "tags_all": {
              "Demo": "Terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:security-group/sg-01c56c938905ed720",
            "description": "alb network traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-000725b1f1742a18c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c56c938905ed720",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "674541888232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.ec2_instance_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:security-group/sg-000725b1f1742a18c",
            "description": "application network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000725b1f1742a18c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from EC2 Instance Connect",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "3001 from alb",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "ec2_instance_sg",
            "name_prefix": "",
            "owner_id": "674541888232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_instance_sg"
            },
            "tags_all": {
              "Name": "ec2_instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b785d2ad4c9cfaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3001,
            "id": "sgrule-1658303996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-000725b1f1742a18c",
            "security_group_rule_id": "sgr-09d965dfd589aba20",
            "self": false,
            "source_security_group_id": "sg-01c56c938905ed720",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ec2_instance_sg"
          ]
        }
      ]
    }
  ]
}